--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 astroid==2.15.5
 contourpy==1.0.7
+coverage==7.2.7
 cycler==0.11.0
 dill==0.3.6
 exceptiongroup==1.1.1
@@ -18,6 +19,7 @@ pluggy==1.0.0
 pylint==2.17.4
 pyparsing==3.0.9
 pytest==7.3.1
+pytest-cov==4.1.0
 python-dateutil==2.8.2
 six==1.16.0
 tomli==2.0.1
